ingress/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2-elasticsearch-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
  - host: wso2-elasticsearch.20.124.60.109.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wso2-elasticsearch-service
            port:
              number: 9200
