ingress/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2-kibana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: wso2-kibana-dahboard.20.124.60.109.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wso2-kibana-service
            port:
              number: 5601
