ingress/wso2-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2apim-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - wso2apim-gateway.20.124.60.109.nip.io
  rules:
  - host: wso2apim-gateway.20.124.60.109.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wso2apim-service
            port:
              number: 8243
